A few light alignment fixes

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -277,4 +277,5 @@ footer h3{
 
 .iframe{
     display:block;
+    border: none;
 }
